# Fronge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Fronge.sln  FrongeEditor.sln  README.md  build.bat  clean.bat  cleanBuild.bat  premake5.lua  vcpkg.json
Engine/: CMakeLists.txt
Engine/Box2D/: Box2D.vcxproj  Box2D.vcxproj.filters
Engine/Fronge/: Fronge.vcxproj  Fronge.vcxproj.filters
Engine/Fronge/Code/: AudioSDL.cpp  AudioSDL.h  AudioService.cpp  Behaviour.h  Command.hpp  Defines.hpp  EventQueue.hpp  Fronge.cpp  GameObjectCommand.cpp  GameObjectCommand.h  InputManager.cpp  MoveCommand.cpp  PhysicsManager.cpp  Plot.h  RenderContext.cpp  ResourceManager.h  Rotator.h  Singleton.hpp  Sprite.cpp  Sprite.h  SystemEventManager.cpp  Text.h  Timer.cpp  Transform.cpp  Typenames.hpp  imgui.ini
Engine/Fronge/Include/: AudioSDL.h  AudioService.h  BaseReferencable.h  Behaviour.h  ButtonInput.h  Component.h  ECS.h  ECSGroup.hpp  Event.hpp  EventQueue.hpp  FPSCounter.h  FixedBehaviour.h  Fronge.h  GUI.h  GUIContext.h  GameObject.h  InputManager.h  Matrix2D.h  PhysicsManager.h  Plot.h  Referencable.hpp  Reference.hpp  References.hpp  RenderContext.h  Renderable.h  ResourceManager.h  RigidBody.h  Rotator.h  Scene.h  SceneManager.h  ServiceLocator.hpp  Singleton.hpp  SparseSet.hpp  Sprite.h  SpriteAnimator.h  State.h  StateMachine.h  Steam.h  SystemEventManager.h  Text.h  (+3 more)
Engine/Fronge/Source/: AudioSDL.cpp  AudioService.cpp  BaseReference.cpp  Behaviour.cpp  ButtonInput.cpp  Component.cpp  FPSCounter.cpp  FixedBehaviour.cpp  Fronge.cpp  GUI.cpp  GUIContext.cpp  GameObject.cpp  InputManager.cpp  Matrix2D.cpp  PhysicsManager.cpp  Plot.cpp  RenderContext.cpp  Renderable.cpp  ResourceManager.cpp  RigidBody.cpp  Rotator.cpp  Scene.cpp  SceneManager.cpp  Sprite.cpp  SpriteAnimator.cpp  State.cpp  StateMachine.cpp  Steam.cpp  SystemEventManager.cpp  Text.cpp  Transform.cpp  TransformationMatrix2D.cpp  XInput.cpp
Engine/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
Engine/ImPlot/: ImPlot.vcxproj  ImPlot.vcxproj.filters
Engine/Lua/: Lua.vcxproj  Lua.vcxproj.filters
Engine/Source/: Application.hpp  Fronge.hpp  froch.hpp
Engine/Source/Audio/: Audio.cpp  Audio.hpp
Engine/Source/ECS/: Group.hpp
Engine/Source/Events/: InputEvent.hpp  WindowEvent.cpp
Engine/Source/Gamepad/: Gamepad.cpp
Engine/Source/Idenitifer/: ID.cpp
Engine/Source/Logger/: Logger.hpp
Engine/Source/Reference/: BaseReference.cpp
Engine/Source/Renderer/: Renderer.cpp
Engine/Source/SVGParser/: SVGParser.cpp
Engine/Source/Utility/: VariantVisitor.hpp
Fronge/: Behaviour.cpp  Behaviour.h  ButtonInput.cpp  ButtonInput.h  CMakeLists.txt  Command.h  Component.h  Console.cpp  Console.h  Defines.hpp  DirtyData.hpp  Event.hpp  EventDispatcher.hpp  EventManager.cpp  EventManager.h  FPSCounter.cpp  FPSCounter.h  Fronge.cpp  Fronge.h  Fronge.vcxproj  Fronge.vcxproj.filters  GUI.cpp  GUI.h  GUIContext.cpp  GUIContext.h  GameObject.cpp  GameObject.h  GameObjectCommand.cpp  GameObjectCommand.h  InputManager.cpp  InputManager.h  KeyInput.cpp  KeyInput.h  MoveCommand.cpp  MoveCommand.h  Plot.cpp  Plot.h  RenderContext.cpp  RenderContext.h  Renderable.h  (+28 more)
Fronge/Code/: AudioSDL.cpp  AudioSDL.h  AudioService.cpp  AudioService.h  Behaviour.cpp  Behaviour.h  ButtonInput.cpp  ButtonInput.h  Command.hpp  Component.cpp  Component.h  Console.cpp  Console.h  Console.hpp  Defines.hpp  DirtyData.hpp  Event.hpp  EventQueue.hpp  FPSCounter.cpp  FPSCounter.h  Fronge.cpp  Fronge.h  GUI.cpp  GUI.h  GUIContext.cpp  GUIContext.h  GameObject.cpp  GameObject.h  GameObjectCommand.cpp  GameObjectCommand.h  InputManager.cpp  InputManager.h  MoveCommand.cpp  MoveCommand.h  Plot.cpp  Plot.h  RenderContext.cpp  RenderContext.h  Renderable.cpp  Renderable.h  (+24 more)
Fronge/Include/: Application.hpp  Core.hpp  EntryPoint.hpp  Fronge.hpp  Logger.hpp
Fronge/Source/: Application.hpp  Core.hpp  Fronge.hpp  Logger.hpp  Utility.hpp  froch.cpp  froch.hpp
Fronge/Source/Application/: Application.cpp  Application.hpp
Fronge/Source/Audio/: Audio.cpp  Audio.hpp
Fronge/Source/ECS/: ComponentSparseSet.hpp  Group.hpp
Fronge/Source/EventSystem/: Event.hpp  EventDispatcher.hpp  EventListener.hpp  EventSystem.hpp
Fronge/Source/Events/: AudioEvent.cpp  AudioEvent.hpp  Event.cpp  Event.hpp  EventDispatcher.hpp  EventListener.hpp  Events.hpp  InputEvent.cpp  InputEvent.hpp  WindowCloseEvent.cpp  WindowCloseEvent.hpp  WindowEvent.cpp  WindowEvent.hpp
Fronge/Source/Fronge/: Application.hpp  Core.hpp  EntryPoint.hpp  Logger.hpp
Fronge/Source/Gamepad/: Gamepad.cpp  Gamepad.hpp
Fronge/Source/GlobalEventManager/: GlobalEventManager.cpp  GlobalEventManager.hpp
Fronge/Source/Idenitifer/: ID.cpp  ID.hpp  IDGenerator.cpp  IDGenerator.hpp
Fronge/Source/Input/: Input.hpp
Fronge/Source/InputManager/: InputManager.cpp  InputManager.hpp
Fronge/Source/Layering/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Fronge/Source/Logger/: Logger.cpp  Logger.hpp
Fronge/Source/Maths/: Arithmetic.hpp  MathFunctions.hpp  MathStructs.hpp
Fronge/Source/OldFronge/: AudioSDL.cpp  AudioSDL.h  AudioService.cpp  AudioService.h  BaseReferencable.cpp  BaseReference.h  Behaviour.cpp  Component.h  Console.hpp  EventQueue.hpp  FPSCounter.cpp  GameObject.cpp  InputManager.cpp  Plot.cpp  Referencable.hpp  Reference.hpp  ResourceManager.cpp  RigidBody.cpp  Scene.h  SceneManager.h  Singleton.hpp  Sprite.h  SpriteAnimator.cpp  State.cpp  State.h  StateMachine.cpp  StateMachine.h  SystemEventManager.cpp  TransformationMatrix2D.cpp  Typenames.hpp
Fronge/Source/Reference/: BaseReference.cpp  BaseReference.hpp  Referencable.cpp  Referencable.hpp  Reference.hpp
FrongeEditor/: CMakeLists.txt  FrongeEditor.vcxproj  FrongeEditor.vcxproj.filters  premake5.lua
FrongeEditor/Source/: FrongeEditor.cpp  FrongeEditor.hpp
FrongeEntry/: CMakeLists.txt  premake5.lua
FrongeEntry/Source/: Entry.cpp
engine/: CMakeLists.txt
engine/source/: application.hpp  constants.hpp  core.hpp  froch.hpp  fronge.hpp
engine/source/ecs/: entity.cpp  (+11 more)
entry/: CMakeLists.txt
entry/source/: entry.cpp
(+566 files in other folders)
